--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>this is my first program</h1>
+    <p><a href="#">Download excursion (coming soon!)</a></p>
     <img src="img/camp.jpg.jpg">
+
 </body>
 </html>
