--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>this is my first program</h1>
     <p><a href="#">Download excursion (coming soon!)</a></p>
+    <video src="excursion.mp3.mp4"></video>
     <img src="img/camp.jpg.jpg">
 
 </body>
