--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is my first program</h1>
+    <h1>This is my first program</h1>
     <p><a href="#">Download excursion (coming soon!)</a></p>
-    <video src="excursion.mp3.mp4"></video>
+    <video src="excursion.mp3.mp4"></video><br>
+    <h1>your personal travel guide</h1>
     <img src="img/camp.jpg.jpg">
+    <br>
+    <img src="img/phone.jpg.png" alt="error">
+    <h2>Coming Soon for iphone and Android</h2>
+    <br>
+    <p><a href="#" >Download Excursion (Coming Soon!)</a></p>
 
 </body>
 </html>
